# equ

./: README  README.md  equ.cabal
Equ/: Annot.hs  ArbitraryPreExpr.hs  Exercise.hs  Expr.hs  IndType.hs  IndTypes.hs  Main.hs  Matching.hs  MatchingTest.hs  Parser.hs  Parser.lhs  ParserFOL.hs  PreExpr.hs  Proof.hs  Rewrite.hs  Rule.hs  Strategy.hs  Syntax.hs  Theories.hs  Theory.hs  TypeChecker.hs  Types.hs  rewrite_test.hs  testParser.hs
Equ/Exercise/: Conf.hs
Equ/GUI/: Exercise.hs  Expr.hs  Gui.hs  Gui.hs~  Proof.hs  Settings.hs  State.hs  SymbolList.hs  Truth.hs  TruthList.hs  TypeTree.hs  Types.hs  Undo.hs  Utils.hs  Widget.hs  equ.glade  equ2.glade  interfaz1.glade
Equ/GUI/Proof/: Dialogs.hs  RelationList.hs
Equ/GUI/State/: Ctx.hs  Exercise.hs  Expr.hs  Internal.hs  Proof.hs  SymbolList.hs  TypeTree.hs  Undo.hs
Equ/Matching/: Error.hs  Error.hs~  Matching.hs  Monad.hs
Equ/Parser/: Expr.hs  Proof.hs  Types.hs
Equ/PreExpr/: Eval.hs  Internal.hs  Monad.hs  Show.hs  Subst.hs  Symbols.hs  Zipper.hs
Equ/Proof/: Annot.hs  Condition.hs  Condition.hs~  Error.hs  Error.hs~  Induction.hs  Induction.hs~  ListedProof.hs  Monad.hs  Proof.hs  Proof.hs~  Zipper.hs
Equ/Theories/: AbsName.hs  Arith.hs  Common.hs  FOL.hs  List.hs
Equ/TypeChecker/: Error.hs  Monad.hs  Unification.hs
ProofExamples/: andDerivation.proof  asocConcat.proof  fakeInduction.proof~  lengthConcat.proof  simpleWithQuant.proof  sumDerivation.proof
TestSuite/: Test.hs  runtests.hs
TestSuite/Tests/: Matching.hs  Parser.hs  PreExpr.hs  Proof.hs  Rules.hs  Samples.hs  TPreExpr.hs  TRules.hs  TTypeChecker.hs  TypeChecker.hs
debian/: changelog  control  copyright  rules  watch
docs/: design.tex  requirements.txt  requirements.txt~  testing.txt
