Name:                equ
Category:            Proof Checker
Version:             0.1
Synopsis:            A proof checker for propositional calculus.
Description:         
  equ is a program for checking derivations of propositional
  calculus.
License:             GPL
License-file:        LICENSE
Author:              Renato Cherini, Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
Maintainer:          Miguel Pagano <pagano@famaf.unc.edu.ar>
Build-Type:          Simple
Cabal-Version:       >=1.2
tested-with:         GHC==6.10.1
build-type:          Simple
bug-reports:         https://github.com/miguelpagano/equ/issues


Flag coverage
     Description: Generate coverage information with HPC.
     Default:     False

Flag tests
     Description: Generate test.
     Default:     False


Source-repository this
  type:     git
  location: http://github.com/miguelpagano/equ
  branch:   master

Library
  -- Modules exported by the library.
  Exposed-modules:     Equ.PreExpr,
                       Equ.Expr,
                       Equ.TypeChecker
                       Equ.Theories

  -- Packages needed in order to build this package.
  -- Last three for test.
  Build-depends:       base >= 4.2, text >= 0.11.0.8, ordered, random, either, 
                       transformers, mtl >= 2.0, QuickCheck == 2.4.1.1, test-framework-quickcheck2,
                       test-framework, containers >= 0.4, test-framework-hunit, HUnit

  GHC-Options:         -Odph -Wall
  -- HS-Source-Dirs:
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:    

Executable test-equ
  main-is: TestSuite/Test.hs
  if !flag(tests)
    buildable: False
  else
    if flag(coverage)
      ghc-options: -fhpc
      x-hpc: true
    ghc-options: -Wall
